--- a/20-service-workers/ngsw-config.json
+++ b/20-service-workers/ngsw-config.json
@@ -12,6 +12,9 @@
           "/manifest.webmanifest",
           "/*.css",
           "/*.js"
+        ],
+        "urls": [
+          "https://fonts.googleapis.com/css2?family=Oswald:wght@300;700&family=Unbounded:wght@200;300;400;500;600;700;800;900&display=swap"
         ]
       }
     },
